--- a/abj2.html
+++ b/abj2.html
@@ -130,6 +130,9 @@
             <a href="titeres.html">
                 <h4>titeres</h4>
             </a>
+            <a href="escape.html">
+                <h4>JUEGOS DE ESCAPE EN EL AULA</h4>
+            </a>
         </div>
         <div class="curso-central">
             <img src="img/abj2.jpg" alt="">
