--- a/escape.html
+++ b/escape.html
@@ -111,7 +111,7 @@
                 <p>Inscripciones al curso</p>
             </div>
             <div class="btn-masthead">
-                <a href="https://forms.gle/U56EAh4XVYFHMkKK8" class="btn">Inscripción</a>
+                <a href="#" class="btn">Inscripción</a>
             </div>
         </div>
     </div>
@@ -119,7 +119,7 @@
     <div class="contenedor-col-curso">
         <div class="curso-nav">
             <a href="cursos.html">
-                <h4 class="curso-activo">juegos de culturas originarias</h4>
+                <h4>juegos de culturas originarias</h4>
             </a>
             <a href="abj1.html">
                 <h4>abj1</h4>
@@ -131,11 +131,11 @@
                 <h4>titeres</h4>
             </a>
             <a href="escape.html">
-                <h4>JUEGOS DE ESCAPE EN EL AULA</h4>
+                <h4 class="curso-activo">JUEGOS DE ESCAPE EN EL AULA</h4>
             </a>
         </div>
         <div class="curso-central">
-            <img src="img/etnicos3.jpg" alt="">
+            <img src="img/escape.jpeg" alt="">
         </div>
         <div class="banda-central">
             <div class="banda-central-titulo">
@@ -162,61 +162,55 @@
             <div class="curso-programa-drop">
                 <div class="drop-contenido">
                     <div class="drop-item">
+                        <h3>Teórico</h3>
                         <ul>
                             <li>
                                 <p>
-                                    JUEGOS Y CULTURAS ORIGINARIAS
+                                    LOS ESCAPE ROOM
                                 </p>
                             </li>
                             <li>
                                 <p> 
-                                    EL YAGUARETÉ KORÁ
+                                    POR QUÉ USAR UN JUEGO DE ESCAPE EN TU AULA.
                                 </p>
                             </li>
                             <li>
                                 <p>
-                                    JUEGOS Y MÚSICA
+                                    MOTIVACIÓN
                                 </p>
                             </li>
                             <li>
                                 <p>
-                                    PATOLLI, PULUC Y YOLÉ
+                                    TIPOS DE RETOS
                                 </p>
                             </li>
                             <li>
                                 <p>
-                                    CHONETE Y CUCUNUBÁ
+                                    ARQUITECTURA DEL JUEGO
                                 </p>
                             </li>
                             <li>
                                 <p>
-                                    JUEGOS Y DEPORTE
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    JUEGOS Y MATEMÁTICAS
+                                    DISEÑO DE ESCAPES PARA AULAS
                                 </p>
                             </li>
                         </ul>
+                        <h5>Prof. Sandra VISSANI</h5>
                     </div>
                 </div>
             </div>
         </div>
         <div class="btn-curso-contenedor">
             <div class="btn-masthead btn-curso">
-                <a href="https://mpago.la/11tM74b" class="btn">empieza ya</a>
+                <a href="https://mpago.la/1dKQcgA" class="btn">empieza ya</a>
             </div>
             <div class="btn-masthead">
-                    <a href="https://forms.gle/U56EAh4XVYFHMkKK8" class="btn">Inscripción</a>
-                </div>
+                <a href="#" class="btn">Inscripción</a>
             </div>
         </div>
-    <!-- PREGUNTAS FRECUENTES -->
-    <div class="curso-img-contenedor">
-        <h3>Curso completo de <strong>JUEGOS DE CULTURAS ORIGINARIAS</strong> con especialistas</h3>
     </div>
-    <div class="preguntas-title">
+    <!-- PREGUNTAS FRECUENTES -->
+    <!-- <div class="preguntas-title">
         <h3>Preguntas frecuentes</h3>
     </div>
     <div class="preguntas-frecuentes">
@@ -228,7 +222,7 @@
             <div class="preguntas-texto-contenido">
                 <p>
                     El curso está dirigido a docentes, estudiantes, animadores, ludotecarios y
-                    toda persona que desee conocer y conectar con los juegos de culturas originarias y su gran sabiduría.                    .
+                    toda persona que desee adquirir una cultura lúdica o potenciar su creatividad.
                 </p>
             </div>
         </div>
@@ -239,21 +233,13 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                <p>
-                    Prof. Nancy Fernández Parra.<br>
-                    - Rectora de la tecnicatura en ludotecas con diseño de juegos y juguetes del Instituto Yuguets.<br>
-                    - Licenciada y Profesora de Artes combinadas (UBA).<br>
-                    - Estudio teatro con Agustín Alesso.<br>
-                    - Participó en diversos seminarios de teatro Antropológico de la Comuna Baires.<br>
-                    - Se especializó en teatro para niños, con el aporte de la compañia teatral CLUNY a partir de una beca en Quebec, Canada.<br>
-                    - Coordina el espacio teatral Parsifal, como un espacio de laboratorio y Happening teatral.<br><br>
-                    Prof. Alejandro Oliva<br>
-                    - Docente en la Tecnicatura en Ludotecas con diseño en juegos y juguetes del Instituto Superior Yuguets.<br>
-                    - Músico, compositor, director de teatro actor dramaturgo y profesor de ajedrez.<br>
-                    - Coordinador Pedagógico en el programa de ajedrez escolar.<br>
-                    - Docente de la diplomatura en aspectos socioculturales y educativos de ejedrez en UNSAM y UNTF.<br>
-                    - Fundador, compositor y integrante del grupo musical “Tocada Movida”<br>
-                    - Autor del libro “Tocada Movida, relatos de Música y Ajedrez”<br>
-                    - Disertante y docente de la fundación Kasparov para Iberoamérica.
+                    Prof. Sebastián Gonzalez.<br>
+                    Titiritero y Realizador, se desempeña hace mas de 20 años en la realización y manipulación de títeres para teatro, publicidad, TV y diferentes plataformas audiovisuales. <br>
+                    Actualmente se dedica a la docencia en áreas relacionadas al teatro de títeres tanto en manipulación y construcción de los mismos.<br>
+                    Algunas empresas en las que se desempeñó: Disney Chanel, El Reino infantil,
+                    TeLeFe, Televisión Pública entre otras.<br>
+                    Docente en el Instituto Superior Yuguets para la Tecnicatura en Ludotecas con Diseño de Juegos y Juguetes.<br>
+                    
                </p>
             </div>
         </div>
@@ -264,7 +250,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    Para inscribirse al curso podes hacerlo directamente desde el botón comprar y
+                    Para inscribirse al curso podes hacerlo directamente desde el botón "comprar" y
                     seguir los pasos o bien contactarse con nosotros vía whatsapp o mail.
                 </p>
             </div>
@@ -276,7 +262,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    Los cursos comienzan cada mes, consultar por fechas de inicio.
+                    El curso de TITERES AL TOKE comienza el 15 de JUNIO.
                 </p>
             </div>
         </div>
@@ -287,7 +273,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso consta de 4 encuentros. Los días Miércoles de 19 a 20:30 hs..
+                    El curso contiene 4 encuentros, los día Jueves de 19 a 20:30 hs.
                 </p>
             </div>
         </div>
@@ -298,10 +284,10 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El programa se ofrece a distancia mediante clases en vivo por zoom, entrega de material de lectura complementario y un grupo de WhatsApp para consultas y compartir experiencias.<br>
-                    Las clases en vivo quedarán grabadas en la plataforma de YUGUETS para quienes no hayan podido conectarse o deseen volver a verlas.<br>
-                    Para ser evaluado deberá presentar un trabajo práctico.<br>
-                    Al finalizarlo se otorgará el certificado correspondiente.
+                    Se guiará para la realización del títere o teatro a través de videos
+                    e intercambios con el profesor.<br>
+                    También cuenta con el foro para abrir diálogo entre los cursantes y el profesor.<br>
+                    La finalización de cada trabajo habilitará para pasar al próximo módulo.
                 </p>
             </div>
         </div>
@@ -323,7 +309,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso tiene un costo de $9.800.- (pesos argentinos).
+                    El curso tiene un costo de AR$11.000.- o 2 cuotas de AR$6.000.-
                 </p>
             </div>
         </div>
@@ -338,7 +324,23 @@
                 </p>
             </div>
         </div>
+    </div> -->
+    <!-- BECAS -->
+    <!-- <div class="becas-contenedor">
+        <h3>programa de becas</h3>
+        <img src="img/elena.jpg" alt="">
     </div>
+    <div class="becas-texto">
+        <p>
+            NUESTRAS MANOS SON LAS ANTENAS DEL ALMA, LO QUE HAGAS CON
+            ELLAS SE CONVERTIRÁ EN LA OBRA MAESTRA MAS HERMOSA.            
+        </p>
+        <p>
+            Consulta por el sistema de becas y beneficios para realizar el Taller de
+            Construcción de Titeres y doná uno a Elena Santa Cruz (maestra titiritera)
+            quien los destina a hogares, Hospitales, Colegios y/o Geriátricos.            
+        </p>
+    </div> -->
     <!-- FOOTER -->
     <div class="redes">
         <h3>Seguinos en las redes</h3>
