--- a/titeres.html
+++ b/titeres.html
@@ -130,6 +130,12 @@
             <a href="titeres.html">
                 <h4 class="curso-activo">titeres</h4>
             </a>
+            <a href="escape.html">
+                <h4>JUEGOS DE ESCAPE EN EL AULA</h4>
+            </a>
+        </div>
+        <div class="curso-central">
+            <img src="img/titeres2.jpg" alt="">
         </div>
         <div class="banda-central">
             <div class="banda-central-titulo">
@@ -149,8 +155,70 @@
                 </p>
             </div>
         </div>
-        <div class="proximamente">
-            <h3>"PROXIMAMENTE"</h3>
+        <div class="curso-programa">
+            <div class="curso-programa-boton">
+                <h4>ver programa >>></h4>
+            </div>
+            <div class="curso-programa-drop">
+                <div class="drop-contenido">
+                    <div class="drop-item">
+                        <h3>Teórico</h3>
+                        <ul>
+                            <li>
+                                <p>
+                                    HISTORIA DEL TEATRO DE SOMBRAS EN ORIENTE
+                                </p>
+                            </li>
+                            <li>
+                                <p> 
+                                    HISTORIA DE LOS TÍTERES DE GUIÑOL O DE GUANTE
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    HISTORIA DE LAS MARIONETAS.
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    TÍTERES Y TELEVISIÓN
+                                </p>
+                            </li>
+                        </ul>
+                        <h3>Práctico</h3>
+                        <ul>
+                            <li>
+                                <p>
+                                    REALIZACIÓN DE TÍTERE DE SOMBRAS
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    REALIZACIÓN DE TÍTERE CON MATERIALES CASEROS - TÍTERE AL TOKE -
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    REALIZACIÓN DE UNA MARIONETA CON TELAS, HILOS Y MADERA.
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    PROPUESTAS LÚDICAS CON LOS MATERIALES REALIZADOS.
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="btn-curso-contenedor">
+            <div class="btn-masthead btn-curso">
+                <a href="https://mpago.la/2mkgxRr" class="btn">empieza ya</a>
+            </div>
+            <div class="btn-masthead">
+                <a href="https://n9.cl/abj1-cursovirtual" class="btn">Inscripción</a>
+            </div>
         </div>
     </div>
     <!-- PREGUNTAS FRECUENTES -->
@@ -182,9 +250,12 @@
             <div class="preguntas-texto-contenido">
                <p>
                     Prof. Sebastián Gonzalez.<br>
-                    Titiritero y artista, Director de la Cía. de Títeres Aferrate a la Baranda y la
-                    Productora Los Realizadores. Creador de títeres en televisión, y numerosas obras
-                    presentadas formado con numerosos maestros titiriteros.
+                    Titiritero y Realizador, se desempeña hace mas de 20 años en la realización y manipulación de títeres para teatro, publicidad, TV y diferentes plataformas audiovisuales. <br>
+                    Actualmente se dedica a la docencia en áreas relacionadas al teatro de títeres tanto en manipulación y construcción de los mismos.<br>
+                    Algunas empresas en las que se desempeñó: Disney Chanel, El Reino infantil,
+                    TeLeFe, Televisión Pública entre otras.<br>
+                    Docente en el Instituto Superior Yuguets para la Tecnicatura en Ludotecas con Diseño de Juegos y Juguetes.<br>
+                    
                </p>
             </div>
         </div>
@@ -207,7 +278,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    Se puede empezar en el momento que se desee.
+                    El curso de TITERES AL TOKE comienza el 15 de JUNIO.
                 </p>
             </div>
         </div>
@@ -218,8 +289,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso consta de 1 módulo con una duración estimada de 1 mes, pudiendo
-                    manejar tus días y horarios.
+                    El curso contiene 4 encuentros, los día Jueves de 19 a 20:30 hs.
                 </p>
             </div>
         </div>
@@ -255,7 +325,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    
+                    El curso tiene un costo de AR$11.000.- o 2 cuotas de AR$6.000.-
                 </p>
             </div>
         </div>
