--- a/titeres.html
+++ b/titeres.html
@@ -135,7 +135,9 @@
             </a>
         </div>
         <div class="curso-central">
-            <img src="img/titeres2.jpg" alt="">
+            <video width="380" height="240" controls>
+                <source src="videos/titeresVideo.mp4" type="video/mp4">
+            </video>
         </div>
         <div class="banda-central">
             <div class="banda-central-titulo">
