--- a/titeres.html
+++ b/titeres.html
@@ -141,7 +141,7 @@
         </div>
         <div class="banda-central">
             <div class="banda-central-titulo">
-                <p>Curso</p>
+                <p>Taller</p>
             </div>
             <div class="banda-central-texto">
                 <p>on line</p>
