--- a/escape.html
+++ b/escape.html
@@ -139,7 +139,7 @@
         </div>
         <div class="banda-central">
             <div class="banda-central-titulo">
-                <p>Curso</p>
+                <p>Taller</p>
             </div>
             <div class="banda-central-texto">
                 <p>on line</p>
@@ -205,7 +205,7 @@
                 <a href="https://mpago.la/1dKQcgA" class="btn">empieza ya</a>
             </div>
             <div class="btn-masthead">
-                <a href="#" class="btn">Inscripción</a>
+                <a href="https://forms.gle/peEoXzsSW3Cyx4Xn6" class="btn">Inscripción</a>
             </div>
         </div>
     </div>
