--- a/titeres.html
+++ b/titeres.html
@@ -141,7 +141,7 @@
         </div>
         <div class="banda-central">
             <div class="banda-central-titulo">
-                <p>Taller</p>
+                <p>Curso</p>
             </div>
             <div class="banda-central-texto">
                 <p>on line</p>
@@ -219,7 +219,7 @@
                 <a href="https://mpago.la/2mkgxRr" class="btn">empieza ya</a>
             </div>
             <div class="btn-masthead">
-                <a href="https://n9.cl/abj1-cursovirtual" class="btn">Inscripción</a>
+                <a href="https://forms.gle/azE9p5KegdoXoYjK9" class="btn">Inscripción</a>
             </div>
         </div>
     </div>
