--- a/evento-nuevo-leer-mas.html
+++ b/evento-nuevo-leer-mas.html
@@ -22,7 +22,7 @@
     <title>Instituto Yuguets</title>
 </head>
 <body>
-    <!-- BARRA NAVEGACION -->
+    <!-- NAVEGACION -->
     <nav class="nav">
         <div class="menu-btn" id="btn-menu">
             <i class="fas fa-bars fa-2x"></i>
@@ -60,12 +60,12 @@
                     <li class="nav-link">
                         <a href="graduados.html">graduados</a>
                     </li>
-                    <li class="nav-link active">
-                        <a href="contacto.html">contacto</a>
-                        <div class="linea-link"></div>
-                    </li>
                     <li class="nav-link">
+                        <a href="contacto.html">contacto</a>
+                    </li>
+                    <li class="nav-link active">
                         <a href="eventos.html">eventos</a>
+                        <div class="linea-link"></div>
                     </li>
                 </ul>
             </div>
@@ -86,7 +86,7 @@
                 <iframe
                     src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Finstitutoyuguets.com.ar%2F&layout=button&size=small&width=89&height=20&appId"
                     width="89" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture;">
                 </iframe>
             </div>
         </div>
@@ -114,52 +114,60 @@
             </div>
         </div>
     </div>
-    <!-- CONTENIDO PAGINA -->
-    <div class="masthead">
-        <div class="col-1">
-            <div class="formulario">
-                <form action="">
-                    <div class="form-title">
-                        <h4>Formulario de CONTACTO</h4>
-                    </div>
-                    <div class="input-area">
-                        <input type="text" id="nombre" class="input-text" placeholder="Nombre y Apellido">
-                        <span id="errorNombre" class="text-danger"></span>
-                    </div>
-                    <div class="input-area">
-                        <input type="text" id="email" class="input-text" placeholder="Email">
-                        <span id="errorEmail" class="text-danger"></span>
-                    </div>
-                    <div class="input-area">
-                        <input type="text" id="telefono" class="input-text" placeholder="Telefono">
-                        <span id="errorTelefono" class="text-danger"></span>
-                    </div>
-                    <div class="input-area">
-                        <input type="text" id="comentario" class="input-text" placeholder="Comentario"/>
-                        <span id="errorComentario" class="text-danger"></span>
-                    </div>
-                    <button class="btn contacto" id="btn-contacto">Enviar</button>
-                </form>
+    <div class="eventos-nuevos">
+        <div class="eventos-nuevos-title">
+            <div class="title-el1">
+                <h3>El juego "Tierra de la Magia y las 11 Puertas"</h3>
+            </div>
+            <div class="title-el2">
+                <h3>DISPONIBLE</h3>
             </div>
         </div>
-        <div class="col-2">
-            <div class="casa">
-                <div class="triang1"></div>
-                <div class="triang2"></div>
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="texto-casa">
-                    <p>CARRERA TERCIARIA</p>
-                    <h3>Tecnicatura Superior en</h3>
-                    <h1>LUDOTECAS</h1>
-                    <h5>con DISEÑO en JUEGOS y JUGUETES</h5>
-                    <p>Título Oficial</p>
-                    <p>(otorga puntaje docente)</p>
+        <div class="eventos-nuevos-body">
+            <div class="eventos-nuevos-body-col">
+                <div class="eventos-nuevos-body-span">
+                    <p>
+                        Este juego brinda la oportunidad de explorar secretos milenarios, claves y enseñanzas ancestrales con el fin de abrir las 11 puertas y acceder a la mística "Tierra de la Magia". Se trata de una experiencia diseñada para fomentar la conexión con el conocimiento de diversas culturas originarias y aprender de manera divertida en el entorno familiar.
+                    </p>
+                    <p>
+                        Este juego se basa en la obra literaria "La Tierra de Magia... y las 11 Puertas".Con la compra de este juego, los participantes recibirán como regalo tanto el libro como la música asociada. De esta manera, obtendrán dos experiencias en una sola adquisición. El juego está especialmente diseñado para niños de 7 a 14 años, aunque su enfoque inclusivo permite que toda la familia participe y disfrute. Una característica destacada de este juego es la inclusión de un código QR que permite la descarga del libro digital, las letras de las canciones y la música que acompaña esta cautivadora historia. A través de las cartas del juego, los jugadores se sumergirán en un mundo mágico donde explorarán y aprenderán acerca de diversas culturas, como la egipcia y la griega, así como sobre los pueblos originarios de América y sus formas de expresión artística, lenguaje y su conexión con el entorno. En última instancia, este juego no solo proporciona entretenimiento, sino que también educa sobre cultura general, promoviendo un aprendizaje enriquecedor y el fortalecimiento de los lazos familiares a través del juego. Cabe destacar que el juego, el libro y la música están basados en la obra del autor JL Parise, lo que asegura una experiencia rica en contenido y conocimiento. Es genial saber que el Instituto Superior Yuguets y su Tecnicatura en Ludotecas con Diseño de Juegos y Juguetes contribuyeron con ideas para este juego.
+                    </p>
+                    <p>
+                        <strong>Enfoque Pedagógico:</strong> El juego ha sido diseñado siguiendo un enfoque pedagógico que fomenta el aprendizaje a través del juego, incorporando elementos de resolución de problemas, toma de decisiones y desarrollo de habilidades cognitivas.*<br><br>
+                    </p>
+                    <p>
+                        <strong>Inclusividad:</strong> Se ha dado prioridad a la inclusión en el diseño del juego, asegurando que sea accesible y atractivo para una amplia audiencia, incluyendo niños con diversas habilidades y necesidades.<br><br>
+                    </p>
+                    <p>
+                        <strong>Material Educativo:</strong> El juego incluye material educativo en forma de tarjetas informativas detalladas sobre las civilizaciones egipcias, griegas y pueblos originarios de América, permitiendo a los jugadores aprender mientras disfrutan del juego.<br><br>
+                    </p>
+                    <p>
+                        <strong>Evaluación de Impacto:</strong> Se ha implementado una metodología para evaluar el impacto educativo del juego en los niños, utilizando cuestionarios y actividades de seguimiento.<br><br>
+                    </p>
+                    <p>
+                        <strong>Diseño Interactivo:</strong> El diseño del juego promueve la interacción activa de los jugadores, fomentando la participación activa en lugar de ofrecer una experiencia de juego pasiva.<br><br>
+                    </p>
+                    <p>
+                        <strong>Colaboración Familiar:</strong> El juego fomenta la colaboración y la comunicación entre padres e hijos, promoviendo un aprendizaje en equipo y fortaleciendo los lazos familiares.<br><br>
+                    </p>
+                    <p>
+                        <strong>Desarrollo de Habilidades:</strong> El juego incluye un componente que ayuda a desarrollar habilidades específicas en los niños, como habilidades sociales, cognitivas o motoras.<br><br>
+                    </p>
+                    <p>
+                        <strong>Énfasis en la Diversidad Cultural:</strong> Dada la temática cultural del juego, se ha enfatizado la representación auténtica y respetuosa de las diferentes<br><br>
+                    </p>
+                </div>
+            </div>
+            <div class="eventos-nuevos-body-col">
+                <div class="eventos-nuevos-body-col-3">
+                    <div>
+                        <img src="img/evento-nuevo.jpeg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- FOOTER -->
+    <!-- FOOTER Y REDES -->
     <div class="redes">
         <h3>Seguinos en las redes</h3>
         <div class="icon-redes">
@@ -203,28 +211,6 @@
     </div>
     <div class="legales">
         <h4>Derechos Reservados Yuguets</h4>
-    </div>
-     <!-- MODAL MENSAJE -->
-     <div id="lamascara" class="mascara">
-        <div class="contenido">
-            <div class="modal-content">
-                <div class="modal-title">
-                    <img src="img/iso.png" alt="logo">
-                    <h3>Consulta Enviada Correctamente</h3>
-                    <span class="cerrar" id="cerrarModal">&times;</span>
-                </div>
-                <div class="modal-body">
-                    <hr>
-                    <p>En breve nos comunicaremos con usted</p>
-                    <p>¡Muchas Gracias!</p>
-                </div>
-                <hr>
-                <div class="modal-footer">
-                    <h3>INSTITUTO YUGUETS</h3>
-                    <button type="button" id="aceptarEditarButton" class="btn-acept">Aceptar</button>
-                </div>
-            </div>
-        </div>
     </div>
     <script src="js/index.js"></script>
 </body>
