--- a/institucional.html
+++ b/institucional.html
@@ -64,7 +64,7 @@
                         <a href="contacto.html">contacto</a>
                     </li>
                     <li class="nav-link">
-                        <a href="landing/index.html">eventos</a>
+                        <a href="eventos.html">eventos</a>
                     </li>
                 </ul>
             </div>
@@ -102,11 +102,11 @@
     <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-1">
-            <p>JUEGOS CONSCIENTES</p>
+            <p>CO-CREANDO UN MUNDO CON MAS JUEGOS</p>
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2023</h3>
+                <h3>Ingreso Marzo 2024</h3>
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
@@ -374,7 +374,7 @@
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
                 <div class="column-text">
-                    <h4>SEDE - Riobamba 1059 4° Piso</h4>
+                    <h4>SEDE - Viamonte 1050</h4>
                     <h4>Recoleta - CABA</h4>
                     <h4>Buenos Aires - Argentina</h4>
                 </div>
@@ -390,10 +390,7 @@
             </div>
         </div>
         <div class="column">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3024846791895!2d-58.39683308477056!3d-34.59651188046134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccabe03f5b3df%3A0x90f71e65c96e6828!2sRiobamba%201059%2C%20C1116%20CABA!5e0!3m2!1ses-419!2sar!4v1595842645674!5m2!1ses-419!2sar"
-                 frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1483905316195!2d-58.3819191!3d-34.600409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac88b88a913%3A0xba1640765135e1d3!2sViamonte%201050%2C%20C1049%20CABA!5e0!3m2!1ses-419!2sar!4v1703066900449!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     <div class="legales">
