--- a/contacto.html
+++ b/contacto.html
@@ -60,6 +60,9 @@
                     <li class="nav-link">
                         <a href="graduados.html">graduados</a>
                     </li>
+                    <li class="nav-link">
+                        <a href="juegos.html">juegos</a>
+                    </li>
                     <li class="nav-link active">
                         <a href="contacto.html">contacto</a>
                         <div class="linea-link"></div>
