--- a/eventos.html
+++ b/eventos.html
@@ -61,6 +61,9 @@
                         <a href="graduados.html">graduados</a>
                     </li>
                     <li class="nav-link">
+                        <a href="juegos.html">juegos</a>
+                    </li>
+                    <li class="nav-link">
                         <a href="contacto.html">contacto</a>
                     </li>
                     <li class="nav-link active">
@@ -122,10 +125,9 @@
             <video controls>
                 <source src="videos/evento2.mp4" type="video/mp4">
             </video>
-            <a href="evento-nuevo.html">Ver Evento</a>
         </div>
         <div class="eventos-item">
-            <a href="#"><img src="img/evento1.jpg" alt=""></a>
+            <img src="img/evento1.jpg" alt="">
         </div>
     </div>
     <!-- FOOTER Y REDES -->
