--- a/graduados.html
+++ b/graduados.html
@@ -62,6 +62,9 @@
                         <div class="linea-link"></div>
                     </li>
                     <li class="nav-link">
+                        <a href="juegos.html">juegos</a>
+                    </li>
+                    <li class="nav-link">
                         <a href="contacto.html">contacto</a>
                     </li>
                     <li class="nav-link">
