--- a/cursos.html
+++ b/cursos.html
@@ -62,6 +62,9 @@
                         <a href="graduados.html">graduados</a>
                     </li>
                     <li class="nav-link">
+                        <a href="juegos.html">juegos</a>
+                    </li>
+                    <li class="nav-link">
                         <a href="contacto.html">contacto</a>
                     </li>
                     <li class="nav-link">
