--- a/institucional.html
+++ b/institucional.html
@@ -61,6 +61,9 @@
                         <a href="graduados.html">graduados</a>
                     </li>
                     <li class="nav-link">
+                        <a href="juegos.html">juegos</a>
+                    </li>
+                    <li class="nav-link">
                         <a href="contacto.html">contacto</a>
                     </li>
                     <li class="nav-link">
