--- a/juegos.html
+++ b/juegos.html
@@ -60,12 +60,15 @@
                     <li class="nav-link">
                         <a href="graduados.html">graduados</a>
                     </li>
+                    <li class="nav-link active">
+                        <a href="juegos.html">juegos</a>
+                        <div class="linea-link"></div>
+                    </li>
                     <li class="nav-link">
                         <a href="contacto.html">contacto</a>
                     </li>
-                    <li class="nav-link active">
+                    <li class="nav-link">
                         <a href="eventos.html">eventos</a>
-                        <div class="linea-link"></div>
                     </li>
                 </ul>
             </div>
