delete btn pago

--- a/titeres.html
+++ b/titeres.html
@@ -224,9 +224,9 @@
             </div>
         </div>
         <div class="btn-curso-contenedor">
-            <div class="btn-masthead btn-curso">
+            <!-- <div class="btn-masthead btn-curso">
                 <a href="https://mpago.la/2mkgxRr" class="btn">empieza ya</a>
-            </div>
+            </div> -->
             <div class="btn-masthead">
                 <a href="https://forms.gle/azE9p5KegdoXoYjK9" class="btn">Inscripción</a>
             </div>
