--- a/abj1.html
+++ b/abj1.html
@@ -210,9 +210,9 @@
             </div>
         </div>
         <div class="btn-curso-contenedor">
-            <div class="btn-masthead btn-curso">
+            <!-- <div class="btn-masthead btn-curso">
                 <a href="https://mpago.la/1oygFRm" class="btn">empieza ya</a>
-            </div>
+            </div> -->
             <div class="btn-masthead">
                 <a href="https://n9.cl/abj1-cursovirtual" class="btn">Inscripción</a>
             </div>
