--- a/cursos.html
+++ b/cursos.html
@@ -213,9 +213,9 @@
             </div>
         </div>
         <div class="btn-curso-contenedor">
-            <div class="btn-masthead btn-curso">
+            <!-- <div class="btn-masthead btn-curso">
                 <a href="https://mpago.la/11tM74b" class="btn">empieza ya</a>
-            </div>
+            </div> -->
             <div class="btn-masthead">
                     <a href="https://forms.gle/U56EAh4XVYFHMkKK8" class="btn">Inscripción</a>
                 </div>
