--- a/escape.html
+++ b/escape.html
@@ -210,9 +210,9 @@
             </div>
         </div>
         <div class="btn-curso-contenedor">
-            <div class="btn-masthead btn-curso">
+            <!-- <div class="btn-masthead btn-curso">
                 <a href="https://mpago.la/1dKQcgA" class="btn">empieza ya</a>
-            </div>
+            </div> -->
             <div class="btn-masthead">
                 <a href="https://forms.gle/peEoXzsSW3Cyx4Xn6" class="btn">Inscripción</a>
             </div>
